Corrected whitespacing on portfolio and consolidated styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,7 +56,7 @@ body {
   white-space: pre-line;
 }
 
-.article_content {
+.content {
   white-space: pre-line;
 }
 
